workspace(name = "crt_demo")

load("//third_party/crt:repos.bzl", "crt_repos")
crt_repos(local = "../crt")
load("@crt//:repos.bzl", "crt_repos")
crt_repos()
load("@crt//:deps.bzl", "crt_deps")
crt_deps()

load("@crt//config:registration.bzl", "crt_register_toolchains")
crt_register_toolchains(
    arm = True,
    win64 = True,
)
