workspace(name = "crt_demo")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//third_party/crt:repos.bzl", "crt_repos")
crt_repos(local = "../crt")
load("@crt//:repos.bzl", "crt_repos")
crt_repos()
load("@crt//:deps.bzl", "crt_deps")
crt_deps()

load("@crt//config:registration.bzl", "crt_register_toolchains")
crt_register_toolchains(
    arm = True,
    win64 = True,
)

# Googletest https://google.github.io/googletest/
http_archive(
  name = "com_google_googletest",
  urls = ["https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip"],
  strip_prefix = "googletest-609281088cfefc76f9d0ce82e1ff6c30cc3591e5",
)
