workspace(name = "crt_demo")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//third_party/crt:repos.bzl", "crt_repos")
crt_repos(local = "../crt")
load("@crt//:repos.bzl", "crt_repos")
crt_repos()
load("@crt//:deps.bzl", "crt_deps")
crt_deps()

load("@crt//config:registration.bzl", "crt_register_toolchains")
crt_register_toolchains(
    arm = True,
    riscv32 = True,
    cheri_llvm = True,
    win64 = True,
)

load("//third_party/google:repos.bzl", "google_repos")
google_repos()
# Load the deps from the Google repos in the correct order.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()
load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()
