load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@crt//rules:transition.bzl", "platform_target")
load("@crt//rules:run.bzl", "platform_runner")

cc_binary(
    name = "sieve",
    srcs = ["sieve.c"],
    deps = [
        "//lib:sieve",
    ],
)

cc_test(
    name = "trivial_passing_test",
    srcs = ["trivial_passing_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "trivial_failing_test",
    srcs = ["trivial_failing_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

platform_target(
    name = "windows",
    target = ":sieve",
    platform = "@crt//platforms/x86_64:win64",
)

platform_runner(
    name = "windows_demo",
    binary = ":sieve",
    platform = "@crt//platforms/x86_64:win64",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
)

platform_runner(
    name = "windows_passing_test",
    binary = ":trivial_passing_test",
    platform = "@crt//platforms/x86_64:win64",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    testonly = True,
)
