load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@crt//rules:transition.bzl", "platform_target")
load("@crt//rules:run.bzl", "platform_runner", "platform_test")

cc_binary(
    name = "sieve",
    srcs = ["sieve.c"],
    deps = [
        "//lib:sieve",
    ],
)

cc_test(
    name = "trivial_passing_test",
    srcs = ["trivial_passing_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "trivial_failing_test",
    srcs = ["trivial_failing_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

platform_target(
    name = "windows",
    platform = "@crt//platforms/x86_64:win64",
    target = ":sieve",
)

platform_runner(
    name = "windows_demo",
    binary = ":sieve",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    platform = "@crt//platforms/x86_64:win64",
)

platform_test(
    name = "windows_passing_test",
    binary = ":trivial_passing_test",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    # When running a windows test _and_ you want to see the qemu GUI window,
    # you need to add `local=True` to disable the test sandbox.
    local = True,
    platform = "@crt//platforms/x86_64:win64",
)

platform_test(
    name = "windows_failing_test",
    binary = ":trivial_failing_test",
    exec_config = "@crt//platforms/x86_64:qemu_windows",
    # When running a windows test _and_ you want to see the qemu GUI window,
    # you need to add `local=True` to disable the test sandbox.
    local = True,
    platform = "@crt//platforms/x86_64:win64",
)
