package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@crt//rules:transition.bzl", "platform_target")
load("@crt//rules:run.bzl", "platform_runner")

cc_binary(
    name = "sieve",
    srcs = [
        "notmain.c",
        "cheri_start.S",
    ],
    copts = [
        "-nostdlib",
        "-ffreestanding",
        "-mno-relax",
    ],
    linkopts = [
        "-T $(location memmap.ld)",
        "-nostartfiles",
        "-nostdlib",
        "-mno-relax",
        #        "-lgcc",
    ],
    target_compatible_with = [
        "@platforms//cpu:riscv32",
    ],
    deps = [
        "memmap.ld",
        "//lib:sieve",
    ],
)

platform_target(
    name = "riscv32",
    platform = "@crt//platforms/riscv32:opentitan",
    target = ":sieve",
)

platform_runner(
    name = "demo",
    binary = ":sieve",
    exec_config = "@crt//platforms/riscv32:qemu",
    platform = "@crt//platforms/riscv32:opentitan",
)
